src/components/sc-accordion/sc-accordion-item/sc-accordion-item.scss
:host {
  /**
  * @prop --sc-accordion-animation-duration: var(--sc-animation-duration, 0.2s);
  * @prop --sc-accordion-animation-timing-function: var(--sc-animation-timing-function,ease-in-out);
  * @prop --sc-accordion-item-heading-padding-x: calc(var(--sc-root-spacing, 8px) * 2);
  * @prop --sc-accordion-item-heading-padding-y: calc(var(--sc-root-spacing, 8px) * 2);
  * @prop --sc-accordion-item-body-padding-x: calc(var(--sc-root-spacing, 8px) * 2);
  * @prop --sc-accordion-item-body-padding-y: calc(var(--sc-root-spacing, 8px) * 2);
  * @prop --sc-accordion-item-body-max-height: 100vh;
  * @prop --sc-accordion-item-heading-bg-color: var(--sc-bg-color, #f1f1f1);
  * @prop --sc-accordion-item-body-bg-color: var(--sc-bg-color, #f1f1f1);
  * @prop --sc-accordion-item-heading-border-color: var(--sc-shadow-color,rgba(0, 0, 0, 0.2));
  */
  --sc-accordion-animation-duration: var(--sc-animation-duration, 0.2s);
  --sc-accordion-animation-timing-function: var(
    --sc-animation-timing-function,
    ease-in-out
  );

  --sc-accordion-item-heading-padding-x: calc(var(--sc-root-spacing, 8px) * 2);
  --sc-accordion-item-heading-padding-y: calc(var(--sc-root-spacing, 8px) * 2);
  --sc-accordion-item-body-padding-x: calc(var(--sc-root-spacing, 8px) * 2);
  --sc-accordion-item-body-padding-y: calc(var(--sc-root-spacing, 8px) * 2);
  --sc-accordion-item-body-max-height: 100vh;
  --sc-accordion-item-heading-text-color: var(--sc-text-color, #333333);
  --sc-accordion-item-heading-bg-color: var(--sc-bg-color, #f1f1f1);
  --sc-accordion-item-body-bg-color: var(--sc-bg-color, #f1f1f1);
  --sc-accordion-item-heading-border-color: var(
    --sc-shadow-color,
    rgba(0, 0, 0, 0.2)
  );

  display: block;
  .heading {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    @include raised(0.2);
    @include round();
    border: none;
    text-align: left;
    padding: var(--sc-accordion-item-heading-padding-y)
      var(--sc-accordion-item-heading-padding-x);
    cursor: pointer;
    transition: border-radius var(--sc-accordion-animation-duration) ease
      var(--sc-accordion-animation-duration);
    background: var(--sc-accordion-item-heading-bg-color);

    .heading-text {
      color: var(--sc-accordion-item-heading-text-color);
      margin: 0;
      flex: 1;
    }
    .arrow {
      color: var(--sc-text-color);
      svg {
        width: calc(var(--sc-root-spacing, 8px) * 4);
        height: calc(var(--sc-root-spacing, 8px) * 4);
        path {
          fill: currentColor;
        }
      }
      transition: transform var(--sc-accordion-animation-duration)
        var(--sc-accordion-animation-timing-function);
    }
  }
  .body-container {
    overflow: hidden;
    max-height: 0;
    transition: max-height var(--sc-accordion-animation-duration)
      var(--sc-accordion-animation-timing-function);
    background: var(--sc-accordion-item-body-bg-color);
    .body {
      @include round();
      @include engraved(0.2);
      border-top-left-radius: 0;
      border-top-right-radius: 0;

      overflow: hidden;
      padding: var(--sc-accordion-item-body-padding-y)
        var(--sc-accordion-item-body-padding-x);
    }
  }
}
:host(.autoHeight) {
  .body-container {
    overflow: hidden;
  }
}
:host(.active) {
  .heading {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    transition: border-radius 0s ease;
    border-bottom: 1px solid var(--sc-accordion-item-heading-border-color);

    .arrow {
      transform: rotate(180deg);
    }
  }
  .body-container {
    max-height: var(--sc-accordion-item-body-max-height);
  }
}

